test/errors/alignment_error/zs/too_big_alignment_error.zs
package too_big_alignment_error;

struct NoIntegerAlignmentError
{
align(0xDEADBEEF1):
    int32 field;
};
